Fri Sep  6 17:52:46 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garter.adb: Added spec for Get_Active_Task_Count.

	* s-garter.ads: Removed Get_Active_Task_Count from spec.

Mon Sep  2 18:03:05 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-stratt.ads: Added.

	* s-rpc.ads: Removed the offending declaration.

	* s-rpc.adb: Allow mixed Read and Write calls. Allocate Node
	  packets during the first Write call.

Fri Aug 16 12:36:11 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-parint.adb: Added a pragma Elaborate_All for
	  System.Garlic.Startup.

Tue Aug 13 13:43:00 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am: Added s-garpri.{ads,ali,o}.

	* s-garpri.ads: New file defining static priorities.

	* s-rpc.adb: Take priorities into accounts (transmit priorities
	  from end to end and use static priorites for other tasks).

	* s-garter.adb: Idem.

	* s-gartcp.adb: Idem.

	* s-ganobl.adb: Idem.

Mon Aug 12 16:13:54 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garthi.ads: Fixed (it won't compile (from R. Dewar) in the
	  newest GNAT release).

	* s-gaphlo.ads: Use pointers instead of controlled objects for
	  efficiency.

	* s-gaphlo.adb: Idem.

	* s-ganobl.adb: Added two "with abort" which were missing.

	* s-rpc.adb: More debugging information.

	* s-parint.adb: Idem.

	* s-gartcp.adb: Idem.

	* s-ganobl.adb: Idem.

	* .cvsignore: Added s-gtplsp.ads into the ignore list.

	* s-garhea.adb: Added a partition cache to improve response time.
